--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "useTabs": true,
+  "semi": true,
+  "bracketSpacing": true,
+  "printWidth": 100,
+  "endOfLine": "auto",
+  "jsxSingleQuote": true
 }
